[tool.poetry]
name = "nginx_passwd"
version = "2.1.0"
description = "Basic Auth Password File Manager for nginx"
authors = ["Gene C"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
