[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nginx_passwd"
dynamic = ["version"]
description = "Basic Auth Password File Manager for nginx (gc)"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/nginx_passwd"]
include = [
    "src/nginx_passwd",
]

[tool.hatch.version]
path = "src/nginx_passwd/__about__.py"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["passlib.hash"]
follow_untyped_imports = true
